--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="blue">#0B5A9A</color>
     <color name="orange">#F87247</color>
     <color name="grey">#E4DEDE</color>
+    <color name="Red">#C60B12</color>
     <color name="Primary"/>
 <color name="background_tint_color">#0B5A9A</color>
 <color name="material_dynamic_neutral30">#FFDDDDDD</color>
