--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -153,12 +153,11 @@
             </androidx.cardview.widget.CardView>
 
             <!--Forget password button-->
-
-            <Button
+            <TextView
                 android:id="@+id/forgetpwdd"
                 android:layout_width="168dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="-14dp"
                 android:layout_height="37dp"
                 android:background="@android:color/transparent"
                 android:backgroundTint="@color/white"
