--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,17 +38,10 @@
             app:layout_constraintTop_toBottomOf="@id/cardvieww">
 
             <!--Logo for Lauditor Design-->
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="187dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:src="@drawable/img"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/topView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/topView" />
+            <include layout="@layout/logo_layout"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_horizontal"/>
 
             <!--Textview for Layout Design-->
             <TextView
@@ -105,74 +98,18 @@
 
             <!--Card view for password field-->
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="291dp"
-                android:layout_height="59dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="16dp"
-                app:cardCornerRadius="6dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardElevation="8dp">
-
-                <!--password field layout-->
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:id="@+id/password_back"
-                    app:cardBackgroundColor="@color/white"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:textAlignment="center"
-                    android:tooltipText="password"
-                    app:passwordToggleEnabled="true"
-                    app:passwordToggleTint="@color/black">
-
-                    <!--password text field-->
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_login_password"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        app:cardBackgroundColor="@color/white"
-                        android:layout_alignParentStart="true"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginRight="0dp"
-                        android:background="@android:color/transparent"
-                        android:drawablePadding="5dp"
-                        android:inputType="textPassword"
-                        android:fontFamily="@font/gillsanslight"
-                        android:hint="Password"
-                        android:paddingLeft="12dp"
-                        android:paddingTop="4dp"
-                        android:paddingRight="25dp"
-                        android:paddingBottom="25dp"
-                        android:text=""
-                        android:textColor="@color/black"
-                        android:textColorHint="@color/black" />
-                </com.google.android.material.textfield.TextInputLayout>
-            </androidx.cardview.widget.CardView>
+            <include
+                layout="@layout/password_layout"/>
 
             <!--Forget password button-->
-            <TextView
-                android:id="@+id/forgetpwdd"
-                android:layout_width="168dp"
-                android:layout_marginLeft="20dp"
+<include layout="@layout/forget_password_layout" />
+
+            <include
+                layout="@layout/layout_button"
+                android:layout_width="310dp"
+                android:layout_height="62dp"
                 android:layout_marginTop="10dp"
-                android:layout_height="37dp"
-                android:background="@android:color/transparent"
-                android:backgroundTint="@color/white"
-                android:fontFamily="@font/gillsanslight"
-                android:text="@string/Under_line"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textStyle="bold" />
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="20dp">
-            <!--FLayout for submition field-->
-            <include layout="@layout/layout_button"/>
-</LinearLayout>
+                android:layout_gravity="center" />
             <!--End of Submitions button layout-->
             </LinearLayout>
         <!--End of design-->
