--- a/app/src/main/res/layout/layout_button.xml
+++ b/app/src/main/res/layout/layout_button.xml
@@ -24,7 +24,7 @@
                 android:layout_height="40dp"
                 android:alpha="0.9"
                 android:layout_gravity="center_horizontal"
-                android:background="@color/grey"
+                android:background="#d6d6d6"
                 android:elevation="10dp"
                 android:fontFamily="@font/gillsanslight"
                 android:text="Cancel"
