--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0B5A9A</color>
     <color name="orange">#F87247</color>
-    <color name="grey">#E4DEDE</color>
+    <color name="grey">#d6d6d6</color>
     <color name="Red">#C60B12</color>
     <color name="Primary"/>
 <color name="background_tint_color">#0B5A9A</color>
